--- a/cjkcms/templates/cjkcms/blocks/pagelist_article_cards.html
+++ b/cjkcms/templates/cjkcms/blocks/pagelist_article_cards.html
@@ -1,66 +1,67 @@
 {# Article Cards layout using MDB product card style adapted for articles #}
 {% load wagtailcore_tags wagtailimages_tags %}
 
-<section style="background-color: #eee;" {% if self.settings.custom_id %}id="{{ self.settings.custom_id }}"{% endif %}>
-  <div class="container py-5 {% if self.settings.custom_css_class %}{{ self.settings.custom_css_class }}{% endif %}">
-    <div class="row row-cols-1 row-cols-lg-2 justify-content-center g-3">
-      {% for page in pages %}
-        {% with page.specific as article %}
-          <div class="col">
-            <div class="card shadow-0 border rounded-3 h-100">
-              <div class="card-body">
-                <div class="row">
-                  {% if article.cover_image and self.show_covers %}
-                  <div class="col-md-12 col-lg-4 col-xl-4 mb-4 mb-lg-0">
-                    <div class="bg-image hover-zoom ripple rounded ripple-surface">
-                      {% image article.cover_image fill-900x600 as cover_image %}
-                      <a href="{{ article.url }}" title="{{ article.title }}">
-                          <div class="bg-image">
-                            <img src="{{ cover_image.url }}" class="img-fluid" alt="{{ cover_image.title }}"/>
-                            <div class="mask" style="background-color: rgba(0, 0, 0, 0.6);">
-                              <div class="d-flex justify-content-center align-items-center h-100"></div>
+<section {% if self.settings.custom_id %}id="{{ self.settings.custom_id }}"{% endif %}>
+    <div class="container py-5 {% if self.settings.custom_css_class %}{{ self.settings.custom_css_class }}{% endif %}">
+        <div class="row row-cols-1 row-cols-lg-2 justify-content-center g-3">
+            {% for page in pages %}
+                {% with page.specific as article %}
+                    <div class="col">
+                        <div class="card shadow-0 border rounded-3 h-100">
+                            <div class="card-body">
+                                <div class="row">
+                                    {% if article.cover_image and self.show_covers %}
+                                        <div class="col-6 col-md-12 col-lg-4 col-xl-4 mb-4 mb-lg-0">
+                                            <div class="bg-image hover-zoom ripple rounded-3 ripple-surface">
+                                                {% image article.cover_image fill-900x600 as cover_image %}
+                                                <div class="d-flex justify-content-end">
+                                                    <a href="{{ article.url }}" title="{{ article.title }}">
+                                                        <div class="bg-image rounded-3 hover-overlay">
+                                                            <img src="{{ cover_image.url }}" class="img-fluid shadow-2-strong shadow-4 rounded-3"
+                                                                 alt="{{ cover_image.title }}"/>
+                                                            <div class="mask" style="background-color: rgba(0, 0, 0, 0.6);"></div>
+                                                        </div>
+                                                        <div class="hover-overlay">
+                                                            <div class="mask" style="background-color: rgba(253, 253, 253, 0.15);"></div>
+                                                        </div>
+                                                    </a>
+                                                </div>
+                                            </div>
+                                        </div>
+                                    {% endif %}
+                                    <div class="{% if article.cover_image and self.show_covers %}col-6 col-md-12 col-lg-8 col-xl-8{% else %}col-12{% endif %}">
+                                        {% if self.show_dates %}
+                                            <div class="mb-2 text-muted small">{{ article.seo_published_at|date:"j F Y" }}</div>
+                                        {% endif %}
+                                        <h5 class="mb-1 fw-bold lh-base"><a
+                                                href="{{ article.url }}">{{ article.title }}</a></h5>
+                                        {% if article.author_display %}
+                                            <div class="mb-2 text-muted small">{{ article.author_display }}</div>
+                                        {% elif self.show_authors and article.seo_author %}
+                                            <div class="mb-2 text-muted small">{{ article.seo_author }}</div>
+                                        {% endif %}
+                                        {% if article.seo_description %}
+                                            <div class="mb-2"><span>{{ article.seo_description }}</span></div>
+                                        {% endif %}
+
+                                    </div>
+                                </div>
                             </div>
-                          </div>
-                          <div class="hover-overlay">
-                            <div class="mask" style="background-color: rgba(253, 253, 253, 0.15);"></div>
-                          </div>
-                      </a>
+                            <div class="card-footer">
+                                <div class="d-flex justify-content-end">
+                                    <a href="{{ article.url }}" class="btn btn-primary btn-sm" type="button">Read
+                                        More</a>
+                                    {% if request.user.is_authenticated and perms.wagtailadmin.access_admin %}
+                                        <a href="/backend/pages/{{ article.id }}/edit/"
+                                           class="btn btn-outline-primary btn-sm ms-2"
+                                           title="Edit this article in Wagtail admin">Edit</a>
+                                    {% endif %}
+                                </div>
+                            </div>
+                        </div>
                     </div>
-                  </div>
-                  {% endif %}
-                  <div class="{% if article.cover_image and self.show_covers %}col-md-12 col-lg-8 col-xl-8{% else %}col-12{% endif %}">
-                    {% if self.show_dates %}
-                      <div class="mb-2 text-muted small">{{ article.seo_published_at|date:"j F Y" }}</div>
-                    {% endif %}
-                    <h5 class="mb-1"><a href="{{ article.url }}">{{ article.title }}</a></h5>
-                    {% if article.author_display %}
-                      <div class="mb-2 text-muted small">{{ article.author_display }}</div>
-                    {% elif self.show_authors and article.seo_author %}
-                      <div class="mb-2 text-muted small">{{ article.seo_author }}</div>
-                    {% endif %}
-                    {% if article.seo_description %}
-                      <div class="mb-2 text-muted small"><span>{{ article.seo_description }}</span></div>
-                    {% endif %}
-                    <p class="text-truncate mb-4 mb-md-0">
-                      {% if article.body_preview %}
-                        {{ article.body_preview }}
-                      {% elif article.body %}
-                        {{ article.body }}
-                      {% endif %}
-                    </p>
-                    <div class="mt-3">
-                      <a href="{{ article.url }}" class="btn btn-primary btn-sm" type="button">Read More</a>
-                      {% if request.user.is_authenticated and perms.wagtailadmin.access_admin %}
-                        <a href="/backend/pages/{{ article.id }}/edit/" class="btn btn-outline-primary btn-sm ms-2" title="Edit this article in Wagtail admin">Edit</a>
-                      {% endif %}
-                    </div>
-                  </div>
-                </div>
-              </div>
-            </div>
-          </div>
-        {% endwith %}
-      {% endfor %}
+                {% endwith %}
+            {% endfor %}
+        </div>
     </div>
-  </div>
 </section>
