--- a/cjkcms/templates/cjkcms/blocks/pagelist_article_cards.html
+++ b/cjkcms/templates/cjkcms/blocks/pagelist_article_cards.html
@@ -1,35 +1,35 @@
-{# Article Cards layout using MDB product card style adapted for articles #}
 {% load wagtailcore_tags wagtailimages_tags %}
 
 <section {% if self.settings.custom_id %}id="{{ self.settings.custom_id }}"{% endif %}>
     <div class="container py-5 {% if self.settings.custom_css_class %}{{ self.settings.custom_css_class }}{% endif %}">
         <div class="row row-cols-1 row-cols-lg-2 justify-content-center g-3">
-            {% for page in pages %}
-                {% with page.specific as article %}
+      {% for page in pages %}
+        {% if not self.num_posts or forloop.counter <= self.num_posts %}
+        {% with page.specific as article %}
                     <div class="col">
                         <div class="card shadow-0 border rounded-3 h-100">
                             <div class="card-body">
                                 <div class="row">
                                     {% if article.cover_image and self.show_covers %}
-                                        <div class="col-12 col-lg-4 col-xl-4 mb-4 mb-lg-0">
+                                        <div class="col-md-12 col-lg-4 col-xl-4 mb-4 mb-lg-0">
                                             <div class="bg-image hover-zoom ripple rounded-3 ripple-surface">
                                                 {% image article.cover_image fill-900x600 as cover_image %}
-                                                <div class="d-flex justify-content-center">
-                                                    <a href="{{ article.url }}" title="{{ article.title }}" style="max-width: 320px; width: 100%;">
-                                                        <div class="bg-image rounded-3 hover-overlay">
-                                                            <img src="{{ cover_image.url }}" class="img-fluid shadow-2-strong shadow-4 rounded-3"
-                                                                 alt="{{ cover_image.title }}"/>
-                                                            <div class="mask" style="background-color: rgba(0, 0, 0, 0.6);"></div>
+                                                <a href="{{ article.url }}" title="{{ article.title }}">
+                                                    <div class="bg-image rounded-3 hover-overlay">
+                                                        <img src="{{ cover_image.url }}"
+                                                             class="img-fluid shadow-2-strong shadow-4 rounded-3"
+                                                             alt="{{ cover_image.title }}"/>
+                                                        <div class="mask" style="background-color: rgba(0, 0, 0, 0.6);">
                                                         </div>
-                                                        <div class="hover-overlay">
-                                                            <div class="mask" style="background-color: rgba(253, 253, 253, 0.15);"></div>
-                                                        </div>
-                                                    </a>
-                                                </div>
+                                                    </div>
+                                                    <div class="hover-overlay">
+                                                        <div class="mask" style="background-color: rgba(253, 253, 253, 0.15);"></div>
+                                                    </div>
+                                                </a>
                                             </div>
                                         </div>
                                     {% endif %}
-                                    <div class="{% if article.cover_image and self.show_covers %}col-12 col-lg-8 col-xl-8{% else %}col-12{% endif %}">
+                                    <div class="{% if article.cover_image and self.show_covers %}col-md-12 col-lg-8 col-xl-8{% else %}col-12{% endif %}">
                                         {% if self.show_dates %}
                                             <div class="mb-2 text-muted small">{{ article.seo_published_at|date:"j F Y" }}</div>
                                         {% endif %}
@@ -43,7 +43,6 @@
                                         {% if article.seo_description %}
                                             <div class="mb-2"><span>{{ article.seo_description }}</span></div>
                                         {% endif %}
-
                                     </div>
                                 </div>
                             </div>
@@ -60,8 +59,9 @@
                             </div>
                         </div>
                     </div>
-                {% endwith %}
-            {% endfor %}
+        {% endwith %}
+        {% endif %}
+      {% endfor %}
         </div>
     </div>
 </section>
