--- a/cjkcms/templates/cjkcms/snippets/footer.html
+++ b/cjkcms/templates/cjkcms/snippets/footer.html
@@ -1,13 +1,15 @@
-{% load wagtailcore_tags cjkcms_tags %}
+{% load wagtailcore_tags cjkcms_tags i18n %}
 <footer>
 
 {% get_footers as footers %}
 {% for footer in footers %}
-    <div {% if footer.custom_id %} id="{{footer.custom_id}}"{% endif %} {% if footer.custom_css_class %} class="{{footer.custom_css_class}}"{% endif %}>
-        {% for item in footer.content %}
-            {% include_block item with format=format settings=settings %}
-        {% endfor %}
-    </div>
+    {% if footer.language == LANGUAGE_CODE or footer.language == '_all_' %}
+        <div {% if footer.custom_id %} id="{{footer.custom_id}}"{% endif %} {% if footer.custom_css_class %} class="{{footer.custom_css_class}}"{% endif %}>
+            {% for item in footer.content %}
+                {% include_block item with format=format settings=settings %}
+            {% endfor %}
+        </div>
+    {% endif %}
 {% endfor %}
 
 </footer>
